k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sprint-planning-poker
  labels:
    name: sprint-planning-poker
