k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sprint-planning-poker
  name: frontend
spec:
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
      - name: frontend
        image: discorev/sprint-planning-poker-website
        ports:
        - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  namespace: sprint-planning-poker
  name: frontend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
  - port: 4200
    targetPort: 4200
