k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sprint-planning-poker
  name: server
spec:
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
      - name: server
        image: discorev/sprint-planning-poker-server
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: sprint-planning-poker
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
  - port: 8080
    targetPort: 8080
